# tap-jira

./: .gitignore  README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
tap_jira/: client.py  streams.py  tap.py
tap_jira/tests/: test_core.py
