[tool.poetry]
name = "tap-jira"
version = "0.0.1"
description = "`tap-jira` is a Singer tap for Jira, built with the Meltano SDK for Singer Taps."
authors = ["Alex Butler"]
keywords = [
    "ELT",
    "Jira",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
requests = "^2.25.1"
singer-sdk = "^0.5.0"
jira = "^3.2.0"
orjson = "^3.7.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"
black = "^22.3.0"


[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_jira"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-jira = 'tap_jira.tap:TapJira.cli'
